--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.1",
         "firebase": "^9.16.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.7.0",
         "sass": "^1.57.1"
     },
